--- a/chat-space/app/assets/stylesheets/_main_contents.scss
+++ b/chat-space/app/assets/stylesheets/_main_contents.scss
@@ -2,8 +2,6 @@
   width: calc(100vw - 300px);
   float: left;
 }
-
-
 .main_header {
   height: 100px;
   padding: 0 40px;
@@ -16,66 +14,61 @@
   font-size: 20px;
   color: #333;
   margin-top: 35px;
-}
 
-%h2.current_group_name {
-  font-size: 100%;
-  font-weight: normal;
-}
+  &__name {
+    font-size: 100%;
+    font-weight: normal;
+  }
 
+  &__member_list {
+    display: flex;
+    margin-top: 15px;
+    font-size: 12px;
+    color: #999999;
+  }
 
-.member_list {
-  display: flex;
-  margin-top: 15px;
-  font-size: 12px;
-  color: #999999;
-}
-
-%a.main_header_edit_btn { 
-  text-decoration: none;
-}
-
-.main_header_edit_btn { 
-  height: 40px;
-  line-height: 40px;
-  padding: 0 20px;
-  margin-top: 30px;
-  border: solid 1px #38aef0;
-  color: #38aef0;
+  &--main_header_edit_btn { 
+      height: 40px;
+      line-height: 40px;
+      padding: 0 20px;
+      margin-top: 30px;
+      border: solid 1px #38aef0;
+      color: #38aef0;
+  }
 }
 
 .messages {
-  height: calc(100vh - 190px);
-  padding: 46px 40px;
-  background-color: #fafafa;
-  overflow: scroll;
+    height: calc(100vh - 190px);
+    padding: 46px 40px;
+    background-color: #fafafa;
+    overflow: scroll;
 }
 
 .message {
   padding-bottom: 40px;
-}
 
-.upper_info {
-  display: flex;
-  margin-bottom: 10px;
-}
+  &__upper_info {
+    display: flex;
+    margin-bottom: 10px;
+  
+    &--upper_info_user {
+      color: #434a54;
+      font-size: 16px;
+      font-weight: bold;
+    }
 
-.upper_info_user {
-  color: #434a54;
-  font-size: 16px;
-  font-weight: bold;
-}
+    &--upper_info_date {
+      color: #999999;
+      font-size: 12px;
+      margin-left: 10px;
+    }
+  }
 
-.upper_info_date {
-  color: #999999;
-  font-size: 12px;
-  margin-left: 10px;
-}
-
-.message_text {
-  color: #434a54;
-  font-size: 14px;
-  margin-bottom: 10px;
+  &__message_text {
+    color: #434a54;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
 }
 
 .form {
@@ -88,44 +81,44 @@
   display: flex;
 }
 
-.input-box {
+.input_box {
+  width: 86%;
   position: relative;
   float: left;
-}
 
-.input-box__text {
-  height: 50px;
-  width: 865px;
-  padding: 0 40px 0 10px;
-  color: #434a54;
-  border-style: none
-}
+  &__text {
+    height: 50px;
+    width: 100%;
+    padding: 0 40px 0 10px;
+    color: #434a54;
+    border-style: none
+  }
 
-.image-label {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-}
+  &__image_label {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  
+    &--fa {
+      display: inline-block;
+      font: normal normal normal 14px/1 FontAwesome;
+      font-size: inherit;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+    }
 
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-}
-
-.image-label__input {
-  display: none;
-}
-
-.new-message__submit-btn { 
-  width: 100px;
-  height: 50px;
-  padding: 0 30px;
-  margin-left: 15px;
-  background-color: #38aef0;
-  color: white;
-  cursor: pointer;
+    &--input {
+      display: none;
+    }
+  }
+  &__new-message__submit-btn { 
+    width: 100px;
+    height: 50px;
+    padding: 0 30px;
+    margin-left: 15px;
+    background-color: #38aef0;
+    color: white;
+    cursor: pointer;
+  }
 }
