--- a/chat-space/app/views/messages/_message3.html.haml
+++ b/chat-space/app/views/messages/_message3.html.haml
@@ -1,8 +1,8 @@
 .message
-  .upper_info
-    %p.upper_info_user
+  .message__upper_info
+    %p.message__upper_info--upper_info_user
       gg
-    %p.upper_info_date
+    %p.message__upper_info--upper_info_date
       2019/06/01
-  %p.message_text
-    sssssssssssssssssssssssssssssss
+  %p.message__message_text
+    sssssssssssvvvvvvvvvvvvvv
