--- a/chat-space/app/views/messages/_group.html.haml
+++ b/chat-space/app/views/messages/_group.html.haml
@@ -1,6 +1,5 @@
 %a{ :href => "/groups/1552/messages"}
-  .group
-    %p.group__group-name
-      dd
-    %p.group__latest-message
-      ss
+  %p.side_contents__groups--group_name
+  dd
+  %p.side_contents__groups--group_latest_message
+    ss
