aタグをlink_toに変更しました。

--- a/chat-space/app/views/messages/_group.html.haml
+++ b/chat-space/app/views/messages/_group.html.haml
@@ -1,4 +1,4 @@
-%a{ :href => "/groups/1552/messages"}
+= link_to root_path do
   %p.side_contents__groups--group_name
   dd
   %p.side_contents__groups--group_latest_message
