--- a/chat-space/app/views/messages/index.html.haml
+++ b/chat-space/app/views/messages/index.html.haml
@@ -3,13 +3,13 @@
   .side_contents
     .side_header
       %p.side_header_user_name
-        gg
+        = current_user.name
       %ul.side_header__user_menu
         %li.user_menu__edit_user
           = link_to root_path do
             %i.fa.fa-edit
         %li.user_menu__new_group
-          = link_to root_path do
+          = link_to edit_user_path(current_user) do
             %i.fa.fa-cog
     .groups
       = render 'group'
