--- a/chat-space/app/assets/stylesheets/_main_contents.scss
+++ b/chat-space/app/assets/stylesheets/_main_contents.scss
@@ -27,7 +27,7 @@
     color: #999999;
   }
 
-  &__main_header_edit_btn { 
+  &--main_header_edit_btn { 
       height: 40px;
       line-height: 40px;
       padding: 0 20px;
