メッセージボックス

--- a/chat-space/app/assets/stylesheets/_main_contents.scss
+++ b/chat-space/app/assets/stylesheets/_main_contents.scss
@@ -85,10 +85,11 @@
   width: 86%;
   position: relative;
   float: left;
+  background-color: white;
 
   &__text {
     height: 50px;
-    width: 100%;
+    width: 96%;
     padding: 0 40px 0 10px;
     color: #434a54;
     border-style: none
