--- a/chat-space/app/views/messages/_message.html.haml
+++ b/chat-space/app/views/messages/_message.html.haml
@@ -1,8 +1,13 @@
 .message
-  .message__upper_info
-    %p.message__upper_info--upper_info_user
-      gg
-    %p.message__upper_info--upper_info_date
-      2019/06/01
-  %p.message__message_text
-    ss
+  .upper-message
+    .upper-message__user-name
+      = message.user.name
+    .upper-message__date
+      = message.created_at.strftime("%Y/%m/%d %H:%M")
+  .lower-message
+    - if message.text.present?
+      %p.lower-message__content
+        = message.text
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+
+    //部分テンプレートにどうやってスタイルを当てるのか。indexでレンダーされているのならindexに当ててる部分のscssに記述すればいいのか？
