--- a/chat-space/app/views/messages/index.html.haml
+++ b/chat-space/app/views/messages/index.html.haml
@@ -20,10 +20,11 @@
         .input_box
           = f.text_field :text, placeholder: "type a message" , class: "input_box__text" 
           = f.label :image do
-            .input_box__image_label
-            %i.input_box__image_label--fa.fa-image
-            .input_box__image_label--input
+            .input_box__image_label--fa.fa-image
+            = f.file_field :image, class: "input_box__input"
         = f.submit "Send", class: "input_box__new-message__submit-btn"
+      
+
 
 //クラス名に応じてSCSSを当てている。form_forの時はどうやってクラスを持たせるのか？
 //form_forの記述をhamlで行う場合に、属性に属性値を持たせるための記述方法がわからない→自動で設定されない自分で設定する場合は:は右に。自動に任せる場合は左に書く
