--- a/chat-space/app/views/messages/_message.html.haml
+++ b/chat-space/app/views/messages/_message.html.haml
@@ -1,11 +1,15 @@
-.message
+.message{data: {'user_id' => message.id}}
+  %div{data: {'user_name' => message.user.name}}
+  %div{data: {'user_message' => message.text}}
   .upper-message
     .upper-message__user-name
+      -# %div{data: {'user_name' => message.user.name}}
       = message.user.name
     .upper-message__date
       = message.created_at.strftime("%Y/%m/%d %H:%M")
   .lower-message
     - if message.text.present?
+      -# %div{data: {'user_message' => message.text}}
       %p.lower-message__content
         = message.text
     = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
